K8S/todo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host-shubham
spec:
  rules:
  - host: "todo-example.info"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todo-example
            port:
              number: 80
